Update: Styles Css

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="styles/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
 </head>
 <body>
-
   <ul>
     <li>
       <form>
@@ -20,16 +20,15 @@
       </form>
     </li>
     <li>
-      <form>
-        <button>Entrar</button>
+      <form class="formEntrar">
+        <button class="entrar">Entrar</button>
       </form>
     </li>
   </ul>
-  
-
-
-  <a href="cadastro.html">Cadastro</a>
-  <a href="home.html">Entrar</a>
+  <div class="containerLinks">
+    <a href="cadastro.html">Cadastro</a>
+    <a href="home.html" class="home">Home</a>
+  </div>
 
 </body>
 </html>
